[gd_scene load_steps=8 format=3 uid="uid://cxybca2kyjgdb"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_3uiff"]
[ext_resource type="Texture2D" uid="uid://b85tew2ter2br" path="res://Sprites/Background menu.jpeg" id="1_yekoo"]
[ext_resource type="FontFile" uid="uid://bj6t726cjsxre" path="res://AngelBanditDemoRegular.ttf" id="3_dslxc"]
[ext_resource type="PackedScene" uid="uid://cy4fmfka64vlr" path="res://Scenes/Menus/Options.tscn" id="4_w5bks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx12x"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwwhs"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_awsu3"]
bg_color = Color(0, 0, 0, 0)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3uiff")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yekoo")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -258.0
offset_right = 1094.0
offset_bottom = 258.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.870012, 0.76057, 0.389988, 1)
theme_override_fonts/font = ExtResource("3_dslxc")
theme_override_font_sizes/font_size = 56
text = "Dungeon Squad Madness"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_yx12x")
text = "JUGAR
"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lwwhs")
text = "OPCIONES"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_awsu3")
text = "SALIR"

[node name="Options" parent="." instance=ExtResource("4_w5bks")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="exit_options_menu" from="Options" to="." method="_on_options_exit_options_menu"]
